--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "fundoss",
+  "fundoss": "support@business.com",
   "version": "1.0.0",
   "description": "Fund Open Source Software Packages",
   "main": "index.js",
   "scripts": {
+    "postinstall": "node bin/fundoss.js",
+    "start": "node src/tools/clear.js && node bin/fundoss.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +21,14 @@
   "bugs": {
     "url": "https://github.com/hutch120/fundoss/issues"
   },
-  "homepage": "https://github.com/hutch120/fundoss#readme"
+  "homepage": "https://github.com/hutch120/fundoss",
+  "dependencies": {
+    "boxen": "^5.0.1",
+    "fs-extra": "^10.0.0",
+    "glob": "^7.1.7",
+    "chalk": "^2.4.2",
+    "ci-info": "^2.0.0",
+    "term-size": "^2.1.0",
+    "word-wrap": "^1.2.3"
+  }
 }
