--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fundoss",
-  "fundoss": "support@business.com",
+  "fundoss": "support@hutchisonsoftware.com.au",
   "version": "1.0.0",
   "description": "Fund Open Source Software Packages",
   "main": "index.js",
